--- a/package.json
+++ b/package.json
@@ -20,9 +20,15 @@
     "url": "https://github.com/heartly/heartly-readme-boilerplate/issues"
   },
   "homepage": "https://github.com/heartly/heartly-readme-boilerplate#readme",
-  "dependencies": {},
+  "dependencies": {
+    "commander": "^2.15.0"
+  },
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.40",
+    "@babel/preset-env": "^7.0.0-beta.40",
     "eslint": "^4.16.0",
-    "eslint-config-dollarshaveclub": "^3.0.5"
+    "eslint-config-dollarshaveclub": "^3.0.5",
+    "markdownlint-cli": "^0.7.1",
+    "write-good": "^0.11.3"
   }
 }
