--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "eslint": "eslint .",
-    "test": "npm run eslint"
+    "markdownlint": "markdownlint *.md",
+    "write-good": "write-good *.md --no-passive",
+    "test": "npm run eslint && npm run markdownlint && npm run write-good"
   },
   "repository": {
     "type": "git",
